test_regress/t/t_class_new.out
%Error: t/t_class_new.v:9:13: Unsupported: new constructor
                            : ... In instance t
    9 |    function new();
      |             ^~~
%Error: t/t_class_new.v:16:13: Unsupported: new constructor
                             : ... In instance t
   16 |    function new(int i);
      |             ^~~
%Error: t/t_class_new.v:27:12: Unsupported: new with arguments
                             : ... In instance t
   27 |       c2 = new(2);
      |            ^~~
%Error: Exiting due to
